format code, fix sonar