@@ -3,16 +3,14 @@ package com.vissoft.vn.dbdocs.domain.service.impl;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
-import com.vissoft.vn.dbdocs.application.dto.ProjectDTO;
-import com.vissoft.vn.dbdocs.domain.entity.Project;
-import com.vissoft.vn.dbdocs.domain.repository.ProjectRepository;
 import com.vissoft.vn.dbdocs.infrastructure.constant.Constants;
+import com.vissoft.vn.dbdocs.infrastructure.util.DataUtils;
+import com.vissoft.vn.dbdocs.infrastructure.util.StringFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import com.vissoft.vn.dbdocs.application.dto.ChangeLogCreateRequest;
 import com.vissoft.vn.dbdocs.application.dto.ChangeLogDTO;
 import com.vissoft.vn.dbdocs.domain.entity.ChangeLog;
@@ -27,7 +25,6 @@ import com.vissoft.vn.dbdocs.infrastructure.exception.BaseException;
 import com.vissoft.vn.dbdocs.infrastructure.exception.ErrorCode;
 import com.vissoft.vn.dbdocs.infrastructure.mapper.ChangeLogMapper;
 import com.vissoft.vn.dbdocs.infrastructure.security.SecurityUtils;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -40,7 +37,6 @@ public class ChangeLogServiceImpl implements ChangeLogService {
     private final VersionRepository versionRepository;
     private final UserRepository userRepository;
     private final ChangeLogMapper changeLogMapper;
-    private final SecurityUtils securityUtils;
     private final ProjectAccessService projectAccessService;
 
     private String generateCodeChangeLog(String projectId) {
@@ -49,13 +45,11 @@ public class ChangeLogServiceImpl implements ChangeLogService {
         // Get latest version
         Version latestVersion = versionRepository.findLatestVersionByProjectId(projectId)
                 .orElse(null);
-        
-        int versionNumber = latestVersion != null ? latestVersion.getCodeVersion() : 0;
+        int versionNumber = DataUtils.notNull(latestVersion) ? latestVersion.getCodeVersion() : 0;
         String versionPrefix = versionNumber + ".";
-        
         log.info("Latest version for project {}: {}", projectId, versionNumber);
         
-        // Get latest changelog for this version
+        // Get the latest changelog for this version
         ChangeLog latestChangeLog = changeLogRepository.findLatestChangeLogByVersionPrefix(projectId, versionPrefix)
                 .orElse(null);
         
@@ -79,23 +73,17 @@ public class ChangeLogServiceImpl implements ChangeLogService {
     @Transactional
     public ChangeLogDTO createChangeLog(ChangeLogCreateRequest request) {
         log.info("Creating new changelog for project: {}", request.getProjectId());
-        String currentUserId = securityUtils.getCurrentUserId();
+        String currentUserId = SecurityUtils.getCurrentUserId();
         Integer permission = projectAccessService.checkUserAccess(request.getProjectId(), currentUserId);
-        if (permission == null) {
-            log.error("User {} does not have permission to access project {}", currentUserId, request.getProjectId());
-            throw BaseException.of(ErrorCode.PROJECT_ACCESS_DENIED, HttpStatus.FORBIDDEN);
-        } else if(permission == Constants.Permission.VIEWER) {
-            log.error("User {} does not have permission to access project {}", currentUserId, request.getProjectId());
+        if (DataUtils.isNull(permission) || Objects.equals(permission, Constants.Permission.VIEWER) ) {
+            log.error(ErrorCode.PROJECT_ACCESS_DENIED.name());
             throw BaseException.of(ErrorCode.PROJECT_ACCESS_DENIED, HttpStatus.FORBIDDEN);
         }
-        
         ChangeLog changeLog = changeLogMapper.createRequestToEntity(request);
         changeLog.setCodeChangeLog(generateCodeChangeLog(request.getProjectId()));
-        
         ChangeLog savedChangeLog = changeLogRepository.save(changeLog);
         log.info("Changelog created successfully with ID: {}, code: {}", 
                 savedChangeLog.getId(), savedChangeLog.getCodeChangeLog());
-        
         return changeLogMapper.toDTO(savedChangeLog);
     }
 
@@ -107,15 +95,13 @@ public class ChangeLogServiceImpl implements ChangeLogService {
         try {
             ChangeLog changeLog = changeLogRepository.findById(changeLogId)
                     .orElseThrow(() -> {
-                        log.error("Changelog not found with ID: {}", changeLogId);
+                        log.error((ErrorCode.CHANGELOG_NOT_FOUND.name()));
                         return BaseException.of(ErrorCode.CHANGELOG_NOT_FOUND);
                     });
-            
             String oldCodeChangeLog = changeLog.getCodeChangeLog();
-            // Set new version with index 1
-            String newCodeChangeLog = String.format("%d.1.0", newVersion);
+            // Set the new version with index 1
+            String newCodeChangeLog = String.format(StringFormat.CODE_CHANGE_LOG, newVersion);
             changeLog.setCodeChangeLog(newCodeChangeLog);
-            
             changeLogRepository.save(changeLog);
             log.info("Changelog version updated successfully from {} to {}", oldCodeChangeLog, newCodeChangeLog);
         } catch (Exception e) {
@@ -130,47 +116,34 @@ public class ChangeLogServiceImpl implements ChangeLogService {
         
         try {
             // Check user permission for project access
-            String currentUserId = securityUtils.getCurrentUserId();
+            String currentUserId = SecurityUtils.getCurrentUserId();
             Integer permission = projectAccessService.checkUserAccess(projectId, currentUserId);
             
-            if (permission == null) {
-                log.error("User {} does not have permission to access project {}", currentUserId, projectId);
+            if (DataUtils.isNull(permission)) {
+                log.error(ErrorCode.PROJECT_ACCESS_DENIED.name());
                 throw BaseException.of(ErrorCode.PROJECT_ACCESS_DENIED, HttpStatus.FORBIDDEN);
             }
             
             List<ChangeLog> changelogs = changeLogRepository.findByProjectIdOrderByCreatedDateDesc(projectId);
             log.info("Found {} changelogs for project: {}", changelogs.size(), projectId);
             
-            // Lấy danh sách người dùng liên quan đến changelog
+            // Get creator and modifier user information
             Map<String, Users> userCache = new HashMap<>();
             
             for (ChangeLog changelog : changelogs) {
-                if (changelog.getCreatedBy() != null && !userCache.containsKey(changelog.getCreatedBy())) {
-                    log.info("Finding creator user with ID: {}", changelog.getCreatedBy());
+                if ( DataUtils.notNull(changelog.getCreatedBy()) && !userCache.containsKey(changelog.getCreatedBy())) {
                     userRepository.findById(changelog.getCreatedBy())
-                        .ifPresent(user -> {
-                            log.info("Found creator user: {}, fullName: {}, avatarUrl: {}", 
-                                user.getUserId(), user.getFullName(), user.getAvatarUrl());
-                            userCache.put(changelog.getCreatedBy(), user);
-                        });
+                        .ifPresent(user -> userCache.put(changelog.getCreatedBy(), user));
                 }
-                
                 if (changelog.getModifiedBy() != null && !userCache.containsKey(changelog.getModifiedBy())) {
-                    log.info("Finding modifier user with ID: {}", changelog.getModifiedBy());
                     userRepository.findById(changelog.getModifiedBy())
-                        .ifPresent(user -> {
-                            log.info("Found modifier user: {}, fullName: {}, avatarUrl: {}", 
-                                user.getUserId(), user.getFullName(), user.getAvatarUrl());
-                            userCache.put(changelog.getModifiedBy(), user);
-                        });
+                        .ifPresent(user -> userCache.put(changelog.getModifiedBy(), user));
                 }
             }
             
             log.info("User cache populated with {} users", userCache.size());
-            userCache.forEach((userId, user) -> {
-                log.info("Cached user - ID: {}, fullName: {}, avatarUrl: {}", 
-                    userId, user.getFullName(), user.getAvatarUrl());
-            });
+            userCache.forEach((userId, user) -> log.info("Cached user - ID: {}, fullName: {}, avatarUrl: {}",
+                userId, user.getFullName(), user.getAvatarUrl()));
             
             return changelogs.stream()
                     .map(changelog -> {
@@ -178,7 +151,7 @@ public class ChangeLogServiceImpl implements ChangeLogService {
                         Users modifier = userCache.get(changelog.getModifiedBy());
                         return changeLogMapper.toDTOWithUserInfo(changelog, creator, modifier);
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (BaseException e) {
             log.error("Base exception occurred while fetching changelogs: {}", e.getMessage());
             throw e;
@@ -191,7 +164,6 @@ public class ChangeLogServiceImpl implements ChangeLogService {
     @Override
     public ChangeLogDTO getChangeLogById(String changeLogId) {
         log.info("Fetching changelog by ID: {}", changeLogId);
-        
         try {
             ChangeLog changeLog = changeLogRepository.findById(changeLogId)
                     .orElseThrow(() -> {
@@ -213,10 +185,10 @@ public class ChangeLogServiceImpl implements ChangeLogService {
         
         try {
             // Check user permission for project access
-            String currentUserId = securityUtils.getCurrentUserId();
+            String currentUserId = SecurityUtils.getCurrentUserId();
             Integer permission = projectAccessService.checkUserAccess(projectId, currentUserId);
             
-            if (permission == null) {
+            if (DataUtils.isNull(permission)) {
                 log.error("User {} does not have permission to access project {}", currentUserId, projectId);
                 throw BaseException.of(ErrorCode.PROJECT_ACCESS_DENIED, HttpStatus.FORBIDDEN);
             }
@@ -226,19 +198,19 @@ public class ChangeLogServiceImpl implements ChangeLogService {
                     .orElse(null);
             
             // If no changelog found, return null
-            if (latestChangeLog == null) {
+            if (DataUtils.isNull(latestChangeLog)) {
                 log.info("No changelog found for project: {}", projectId);
                 return null;
             }
             
-            // Lấy thông tin người tạo và người chỉnh sửa
+            // Get creator and modifier user information
             Users creator = null;
             Users modifier = null;
             
-            if (latestChangeLog.getCreatedBy() != null) {
+            if (DataUtils.notNull(latestChangeLog.getCreatedBy())) {
                 log.info("Finding creator user with ID: {}", latestChangeLog.getCreatedBy());
                 creator = userRepository.findById(latestChangeLog.getCreatedBy()).orElse(null);
-                if (creator != null) {
+                if (DataUtils.notNull(creator)) {
                     log.info("Found creator user: {}, fullName: {}, avatarUrl: {}", 
                         creator.getUserId(), creator.getFullName(), creator.getAvatarUrl());
                 } else {
@@ -246,10 +218,10 @@ public class ChangeLogServiceImpl implements ChangeLogService {
                 }
             }
             
-            if (latestChangeLog.getModifiedBy() != null) {
+            if (DataUtils.notNull (latestChangeLog.getModifiedBy())) {
                 log.info("Finding modifier user with ID: {}", latestChangeLog.getModifiedBy());
                 modifier = userRepository.findById(latestChangeLog.getModifiedBy()).orElse(null);
-                if (modifier != null) {
+                if (DataUtils.notNull(modifier)) {
                     log.info("Found modifier user: {}, fullName: {}, avatarUrl: {}", 
                         modifier.getUserId(), modifier.getFullName(), modifier.getAvatarUrl());
                 } else {
